# keycap

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml  msvc.yml
cmake/: CompilerWarnings.cmake  FindBotan3.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
code/: CMakeLists.txt  keycap.ixx
code/keycap/: CMakeLists.txt  algorithm.ixx  concepts.ixx  keycap.ixx  math.ixx  scopeguard.ixx  string.ixx
code/keycap.core/: concepts.ixx  math.ixx  string.ixx
src/: CMakeLists.txt  enum_class.hpp
src/core/: keycap.core-algorithm.ixx  keycap.core-concepts.ixx  keycap.core-error.ixx  keycap.core.ixx
src/keycap.core/: CMakeLists.txt  algorithm.ixx  concepts.ixx  error.ixx  fragments.ixx  keycap.core-array.ixx  keycap.core-error.ixx  keycap.core-math.ixx  keycap.core-random.ixx  keycap.core.ixx  math.ixx  scopeguard.ixx  string.ixx  types.ixx
src/keycap.crypto/: CMakeLists.txt  OTP.ixx  keycap.crypto-OTP.ixx  keycap.crypto-fragments.ixx  keycap.crypto.ixx
src/keycap.window/: CMakeLists.txt  window.ixx
src/window/: fragments.ixx  input_events.ixx  input_mappings.ixx  keycap.window.ixx  window.ixx
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  tests.keycap.core.cpp  tests.keycap.crypto.cpp  tests.keycap.window.cpp
